--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -15,6 +15,35 @@
   gap: 64px;
   font-family: var(--font-geist-sans);
 }
+.searchBar {
+  padding: 10px 20px;
+  border-radius: 30px;
+  background-color: #cbc4bb;
+  color: rgb(43, 37, 37);
+  border: none;
+  font-size: 16px;
+  width: 300px;
+  margin-bottom: 20px;
+  font-family: 'Consolas', sans-serif;
+}
+
+.searchButton {
+  padding: 10px 20px;
+  border-radius: 30px;
+  width: 300px;
+  background-color: #cbc4bb;
+  color: rgb(43, 37, 37);
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: -15px;
+  font-family: 'Consolas', sans-serif;
+}
+
+.searchButton:hover {
+  background-color: #dfddda;
+}
+
 
 @media (prefers-color-scheme: dark) {
   .page {
