--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -13,7 +13,7 @@
   min-height: 100svh;
   padding: 80px;
   gap: 32px;
-  font-family: var(--font-geist-sans);
+  font-family: 'Consolas', sans-serif;
 }
 
 .main {
@@ -23,6 +23,10 @@
   gap: 32px;
   width: 100%;
   max-width: 600px;
+}
+
+.main h1 {
+  font-family: var(--font-geist-sans);
 }
 
 .searchBar {
@@ -35,7 +39,6 @@
   width: 100%;
   max-width: 300px;
   margin-bottom: 20px;
-  font-family: 'Consolas', sans-serif;
 }
 
 .searchButton {
@@ -49,7 +52,6 @@
   font-size: 18px;
   cursor: pointer;
   margin-top: -15px;
-  font-family: 'Consolas', sans-serif;
 }
 
 .searchButton:hover {
@@ -61,6 +63,47 @@
   width: 100%;
   max-width: 600px;
   text-align: left;
+}
+
+.clickableFilename {
+  cursor: pointer;
+  color: #ebf1e8;
+  text-decoration: none;
+}
+
+.clickableFilename:hover {
+  text-decoration: underline;
+  color: #c9d1d9;
+}
+
+.previewSection {
+  text-align: left;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.previewSection pre {
+  margin: 0;
+  padding: 0;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+.downloadButton {
+  padding: 10px 20px;
+  border-radius: 30px;
+  background-color: #cbc4bb;
+  color: rgb(43, 37, 37);
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.downloadButton:hover {
+  background-color: #dfddda;
+  color: #000;
 }
 
 @media (prefers-color-scheme: dark) {
