--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -26,7 +26,7 @@
 }
 
 .main h1 {
-  font-family: var(--font-geist-sans);
+  font-family: 'Consolas', sans-serif;
 }
 .searchContainer {
   position: relative;
